# subminder

./: README.md  meson.build
data/: com.github.jeremyvaartjes.subminder-daemon.desktop.in  com.github.jeremyvaartjes.subminder.appdata.xml.in  com.github.jeremyvaartjes.subminder.desktop.in  com.github.jeremyvaartjes.subminder.gschema.xml  com.github.jeremyvaartjes.subminder.templates.json  meson.build
debian/: changelog  control  copyright
po/: POTFILES  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.jeremyvaartjes.subminder.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+159 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+158 more)
src/: AddSubscriptionDialog.vala  Application.vala  Daemon.vala  DefaultCurrencyDialog.vala  SMCurrency.vala  Settings.vala  Subscription.vala  SubscriptionListRow.vala
